# ollama_assistant

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.json
scripts/: clippy.sh
src/: ai.rs  config.rs  main.rs  theming.rs  update.rs
src/styles/: application.rs  button.rs  container.rs  dropdown.rs  mod.rs  system.rs  text_input.rs
src/ui/: gui.rs  mod.rs
