[package]
name = "ai-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["tokio", "fira-sans"] }
ollama-rs = "0.1.7"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
