[package]
name = "ai-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[dependencies.ollama-rs]
git = "https://github.com/ushinnary/ollama-rs"
branch = "store_chat_history"
features = ["chat-history"]

[dependencies.iced]
version = "0.12.1"
features = ["tokio", "fira-sans", "svg"]
